--- a/styles/auth.css
+++ b/styles/auth.css
@@ -49,12 +49,13 @@
 }
 
 .submit-button {
-	width: 100%;
+	width: 106%;
 	padding: 14px;
 	border-radius: 4px;
 	border-width: 0px;
 	cursor: pointer;
-	background-color: #257636;
+	background-color: #000000;
+	display: block;
 	color: white;
 	outline: none;
 }
